--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@angular/router": "~13.2.0",
     "@fortawesome/angular-fontawesome": "^0.10.2",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@ng-select/ng-select": "^8.1.1",
     "angular-bootstrap-md": "^13.0.0",
+    "ng-multiselect-dropdown": "^0.3.8",
     "ngx-cookie-service": "^13.1.2",
     "primeng": "^13.3.2",
     "rxjs": "~7.5.0",
